# text2tags-lib

./: .gitignore  README.md  pyproject.toml  pyptoject.toml  setup.py  test.py
example/: app.py
examples/: app.py  text2tags_colab.ipynb
lookups/: tags.txt  temptags.txt
tests/: test_functions.py
text2tags/: __init__.py  functions.py
