[project]
name = "text2tags_ooferdoodles"
version = "0.0.1"
authors = [
  { name="Pantai Suyasri", email="pantaisuyasri@gmail.com" },
]
description = "A package to predict Danbooru tags from natural text using a language model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DatboiiPuntai/text2tags-lib"